add updateEmployeeForAppointment
